change log

### 10.10.2017
- fixed eta for green's function 

### 05.10.2017
- fixed bug where reduced density matrix was not initialized correctly for only one traced out level
- fixed bug where progress output for greens functions with more than 999 datapoints was broken

### 04.10.2017
- changed time output in progress display to dynamically choose the best format

### 28.09.2017
- changed character code for mu in time_format to actually print out a mu
- fixed bug in progress print for evaluate_green

### 27.09.2017
- changed getQuartic like functions to multiplication with dot instead of asterisk
- changed occupation numbers to be also calculated when reducing from state (this was a feature previously)
- added more information to progress.log and included print commands in respective methods
- huge cleanup with PyCharm - basically initialized every variable and made everything explicit
- added green-function progress output to stdout and progress.log
- added methods for progress file opening and closing
- a metric shit ton of cosmetics
- added function time_format for int(seconds) to str(sensible)

### 26.09.2017
- added optimizations for only one level left
- added optimizations for only two levels overall
- also added those for reduce from state - try this for those cases
- !!! fixed a bug where the density matrix indicator was not set correctly, resulting in a reallocation every time!
- changed cosmetics of progress bar

### 25.09.2017
- added a self-programmed DFT to the code (as an external python file dft.py)

### 21.09.2017
- fixed bug where plotting of energies fails - a backslash was too much in the axix label
- changed expectation value of energy format from 'e' to 'f'
- added a factor of 2 to the time steps in FT of Green function, since the difference times changes by 2 deltaT

### 20.09.2017
- added some booleans to control folder management

### 19.09.2017
- changed offdiag config parameter to offdiagocc