@@ -39,8 +39,10 @@ retgreen = False
 [calcparams]
 onlyreduced = False
 totalentropy = True
+reducedentropy = True
 totalenergy = True
 reducedenergy = False
+occupations = True
 
 [plotbools]
 data = True
